<resources>

    <string name="app_name">Weight Tron</string>
    <string name="unit_kg">kg</string>
    <string name="unit_kg_format">%1$.1f kg</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_your_weight">Edit your weight</string>
    <string name="add_your_weight">Add your weight</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="settings">Settings</string>
    <string name="failed_to_connect">Google Play services connection failed.</string>
    <string name="note_update_or_delete_data">This data is inserted by other apps. 3rd party apps, which use Google Fit API, cannot update / delete data inserted by other apps.</string>
    <string name="vs_percent_format">%1$.1f %%</string>
    <string name="vs_date_format">vs %1$s</string>
    <string name="does_not_accept_future_value">Doesn\'t accept future timestamp.</string>
    <string name="lets_add_your_weight">Let\'s add your weight!</string>
    <string name="not_enough_data">There are not enough data to draw the line chart.</string>

    <string name="last_30_days">Last 30 days</string>
    <string name="last_90_days">Last 90 days</string>
    <string name="last_180_days">Last 180 days</string>
    <string name="last_360_days">Last 360 days</string>

    <string name="account">Google Fit Account</string>
    <string name="change_default_account">Change Google Fit Account</string>
    <string name="about">About</string>
    <string name="version_format">Version %1$s(%2$d)</string>
    <string name="developed_by">Developed by rakuishi</string>
    <string name="licenses">3rd Party Licenses</string>
    <string name="terms_of_service">\"Weight Tron\" uses your weight data via Google Fit. It means this app doesn\'t collect your data on developer\'s server. Although \"Weight Tron\" uses Google Analytics, this app will just utilize it\'s logs for improvement.</string>

    <string name="licenses_path" translatable="false">file:///android_asset/licenses.html</string>
    <string name="developer_website" translatable="false">https://rakuishi.com</string>
    <string name="banner_app_id" translatable="false">ca-app-pub-9983442877454265~6726639323</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9983442877454265/8203372526</string>

</resources>
