<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SubHeaderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <TextView
                android:id="@+id/bomb_text_view"
                style="@style/SingleLineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_default_account" />

            <TextView
                style="@style/SubHeaderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about" />

            <TextView
                android:id="@+id/version_text_view"
                style="@style/SingleLineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Version 1.0.0(1)" />

            <include layout="@layout/view_divider" />

            <TextView
                android:id="@+id/developer_text_view"
                style="@style/SingleLineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed_by" />

            <include layout="@layout/view_divider" />

            <TextView
                android:id="@+id/license_text_view"
                style="@style/SingleLineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_progressbar_negative_padding"
            android:indeterminate="true" />

    </RelativeLayout>

</layout>